<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_capflix"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_playicon"
        app:layout_constraintBottom_toTopOf="@+id/box_login"
        app:layout_constraintEnd_toEndOf="@+id/box_login"
        app:layout_constraintStart_toStartOf="@+id/box_login"
        app:layout_constraintTop_toTopOf="@+id/box_login" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/login_box_rectangle"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="130dp"
            android:text="@string/sing_in"
            android:textColor="@color/blue_sign_in"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_edit_text"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColorHint="@color/edit_text_login_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_sign_in" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:autofillHints="passwordAddress"
            android:background="@drawable/input_edit_text"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textColorHint="@color/edit_text_login_blue"
            app:layout_constraintEnd_toEndOf="@+id/editText_email"
            app:layout_constraintStart_toStartOf="@+id/editText_email"
            app:layout_constraintTop_toBottomOf="@+id/editText_email" />

        <ImageButton

            android:id="@+id/icon_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="#00ffffff"
            android:importantForAccessibility="no"
            android:src="@drawable/icon_password"
            app:layout_constraintBottom_toBottomOf="@+id/editText_password"
            app:layout_constraintEnd_toEndOf="@+id/editText_password"
            app:layout_constraintTop_toTopOf="@+id/editText_password" />

        <CheckBox
            android:id="@+id/checkbox_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue_sign_in"
            android:checked="true"
            android:text="@string/check_box_login"
            android:textColor="@color/blue_sign_in"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/editText_password"
            app:layout_constraintTop_toBottomOf="@id/editText_password" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/blue_sign_in"
            app:layout_constraintBottom_toBottomOf="@id/checkbox_login"
            app:layout_constraintEnd_toEndOf="@id/editText_password"
            app:layout_constraintTop_toTopOf="@id/checkbox_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_save_rectangle"
            android:backgroundTintMode="add"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/editText_password"
            app:layout_constraintStart_toStartOf="@id/editText_password"
            app:layout_constraintTop_toBottomOf="@id/checkbox_login" />

        <TextView
            android:id="@+id/textView_not_a_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/not_a_member"
            android:textColor="@color/edit_text_login_blue"
            app:layout_constraintEnd_toStartOf="@+id/text_view_sign_up"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login" />

        <TextView
            android:id="@+id/text_view_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_sign_up"
            android:textColor="@color/blue_sign_in"
            android:layout_marginEnd="150dp"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/textView_not_a_member"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView_not_a_member"
            app:layout_constraintTop_toTopOf="@id/textView_not_a_member" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>